[MFLP-122] fix: fix remove button alignment

--- a/src/styles/ButtonsCommon.css
+++ b/src/styles/ButtonsCommon.css
@@ -222,4 +222,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 20rem;
 }
